[gd_scene load_steps=5 format=3 uid="uid://c65lh1ugi65xi"]

[ext_resource type="Script" path="res://game.gd" id="1_ycoo8"]
[ext_resource type="PackedScene" uid="uid://b2pgqiqeuj7b5" path="res://player.tscn" id="2_omwha"]

[sub_resource type="Theme" id="Theme_q1uly"]
Label/font_sizes/font_size = 42

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pn4iu"]
bg_color = Color(0.530628, 0.715081, 0.9009, 1)

[node name="Game" type="Node2D"]
script = ExtResource("1_ycoo8")
player_scene = ExtResource("2_omwha")

[node name="MultiplayerUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 3.0
offset_right = 1150.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="MultiplayerUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -147.0
offset_top = -176.5
offset_right = 147.0
offset_bottom = 176.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_q1uly")
theme_override_styles/panel = SubResource("StyleBoxFlat_pn4iu")

[node name="Label" type="Label" parent="MultiplayerUI/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.0
offset_top = -155.0
offset_right = 62.0
offset_bottom = -97.0
grow_horizontal = 2
grow_vertical = 2
text = "Lobby"

[node name="Join" type="Button" parent="MultiplayerUI/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = -66.0
offset_right = 59.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 2
text = "Join"

[node name="Host" type="Button" parent="MultiplayerUI/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = 21.0
offset_right = 59.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
text = "Host"

[node name="Log" type="TextEdit" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 506.0
offset_right = 402.0
offset_bottom = 650.0
grow_horizontal = 2
grow_vertical = 0

[connection signal="pressed" from="MultiplayerUI/Panel/Join" to="." method="_on_botao_join_pressed"]
[connection signal="pressed" from="MultiplayerUI/Panel/Host" to="." method="_on_botao_host_pressed"]
